# SY

./: AI解析重构规划.md  Cargo.toml  QuickCaptureRustPlan.md  README.en.md  README.md  README.zh-CN.md  原始素材录入规范.md  复盘素材编辑与历史补录模块化开发计划.md  导出与图片.md  数据库与UI数据流梳理.md  数据库结构.md  时间记录统一迁移方案.md  重构.md
life_os_app/: README.md  pubspec.yaml
life_os_app/lib/: main.dart
migrations/: 0001_init_core.sql  0002_supporting_tables.sql  0003_full_domain_design.sql  0004_review_notes.sql  0005_capture_inbox.sql  0006_capture_buffer.sql  0007_unify_time_records.sql
src/: error.rs  ffi.rs  lib.rs
src/ai/: mod.rs  orchestrator.rs  rule_parser.rs
src/cloud/: mod.rs  transport.rs
src/db/: connection.rs  migration.rs  mod.rs  schema.rs
src/models/: ai.rs  capture_buffer.rs  capture_inbox.rs  common.rs  cost.rs  expense_record.rs  income_record.rs  learning_record.rs  mod.rs  overview.rs  preferences.rs  project.rs  project_query.rs  record_query.rs  review.rs  review_note.rs  snapshot.rs  sync.rs  tag.rs  time_record.rs  user.rs
src/repositories/: ai_repository.rs  capture_buffer_repository.rs  capture_inbox_repository.rs  cost_repository.rs  mod.rs  project_repository.rs  record_repository.rs  review_note_repository.rs  review_repository.rs  snapshot_repository.rs  sync_repository.rs
src/services/: ai_service.rs  backup_service.rs  capture_service.rs  cost_service.rs  demo_service.rs  export_service.rs  mod.rs  project_service.rs  record_service.rs  (+4 more)
tests/: ai_capture_corpus.rs  database_flow.rs  external_record_corpus_stress.rs  ffi_bridge.rs  parse_pipeline_stress.rs
(+168 files in other folders)
