[package]
name = "life_os_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"
